# VaultBuddy

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  FRONTEND_SETUP.md  README.md  SECURITY.md  launch-vaultbuddy.bat  pyproject.toml  requirements.txt  run.bat  run.sh  vaultbuddy.db  vaultbuddy.spec
.github/workflows/: ci.yml  release.yml
docs/: CONTRIBUTING.md  FRONTEND_SETUP.md
frontend/: .gitignore  INSTALL.md  README.md  install-fix.bat  package-lock.json  package-stable.json  package.json  start-web.bat  start.bat  start.ps1
frontend/public/: electron.js  index.html  manifest.json  preload.js
frontend/services/: vault-service.js
frontend/src/: App.css  App.js  App.tsx  index.css
frontend/src/components/: AddSecretForm.css  AddSecretForm.js  AddSecretModal.css  AddSecretModal.tsx  Header.css  Header.js  Header.tsx  SecretCard.css  SecretCard.tsx  SecretDetails.css  SecretDetails.js  SecretList.css  SecretList.js  StatusMessage.css  StatusMessage.js  VaultDashboard.css  VaultDashboard.tsx
frontend/src/services/: pythonBackend.ts  vaultService.ts
frontend/src/types/: Secret.ts
scripts/: build.py  run.bat  run.sh  start-dev.bat
src/: crypto.py  main.py  storage.py
src/__pycache__/: Check Database
src/vaultbuddy/: __init__.py  api.py  cli.py  crypto.py  storage.py
tests/: test_cli_and_storage.py
